test/errors/extender.jade
extends auxiliary/good-base

block head
  style
    #example{font-size:bigger;}
block content
  if 1 == true: #fault
  #example Example Text
